# project_template

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  cmake_install.cmake
include/: blank.h
libs/: TODO.txt
progs/: add_env.sh  build.sh  cmake_clean.sh  stdCommands.txt
src/: CMakeLists.txt  Makefile  blank_main.c  cmake_install.cmake
tests/: CMakeLists.txt  buildCheckTest.c
